Add Anti-Patterns section to documentation

--- a/index.html
+++ b/index.html
@@ -235,6 +235,15 @@ header-group a span {
 
       </details>
 
+    <li>
+      <details>
+        <summary><a href=#antipatterns>Anti-Patterns</a></summary>
+
+        <ul>
+          <li></li>
+
+      </details>
+
   </ul>
 
   <header>Documentation</header>
@@ -478,6 +487,11 @@ section#installation pre em.comment
 
 <section view id=conventions>
   <h1>Conventions</h1>
+
+</section>
+
+<section view id=antipatterns>
+  <h1>Anti-Patterns</h1>
 
 </section>
 
