Update render documentation to Lifecycle

--- a/index.html
+++ b/index.html
@@ -420,7 +420,7 @@ section#installation pre em.comment
       <ol>
         <li>After <strong>on</strong> events <em>(example: <code>onclick (event)</code>)</em>.
         <li>After initial <code>onconnect ()</code> hook is fired.
-        <li>Explicit <code>this.render ()</code> callback is triggered.
+        <li>Explicit calls to <code>this.render ()</code>.
       </ol>
 
       <em>(See <a
