Update copy on Lifecycle:Reflection step

--- a/index.html
+++ b/index.html
@@ -462,6 +462,8 @@ section#installation pre em.comment
         target=mdn
         href=https://developer.mozilla.org/en-US/docs/Web/API/GlobalEventHandlers>valid W3C GlobalEventHandlers</a> 
       by name once <em>"connected"</em> to the HTML document.
+      <code>&lt;foo-bar onclick=hello&gt;</code> will <em>"automagically"<sup>&trade;</sup></em> register
+      the <code>hello (event) { }</code> handler defined on the custom element <code>class</code> definition.
 
     <dt>9. Post-Render Idle
     <dd>
