Event handler documentation stub

--- a/index.html
+++ b/index.html
@@ -491,7 +491,8 @@ section#installation pre em.comment
       </a>.
 
     <dt>10. Event Handler (Repeat steps #5 &amp; #6)
-    <dd> 
+    <dd>
+      Event Handler.
 
 </section>
 
