--- a/index.html
+++ b/index.html
@@ -490,9 +490,16 @@ section#installation pre em.comment
           idle time between animation frames
       </a>.
 
-    <dt>10. Event Handler (Repeat steps #5 &amp; #6)
+    <dt>10. Event Handler <em>(On completion Repeats steps #5, #6, #7, #8 &amp; #9)</em>
     <dd>
-      Event Handler.
+      There are a few ways events are registered by <strong>snuggsiツ</strong>.
+      Whether you choose a declarative registration <code>&lt;button onclick=onfoo&gt;</code>,
+      an imperative registration <code>onclick (event) {}</code>,
+      or an explicit registration <code>this.on ('click', this.onfoo)</code>,
+      the <strong>Rendering</strong> pipeline will initiate.
+
+      <em>To prevent <strong>Rendering</strong> simply prevent the default event action
+        by calling <code>event.prevent ()</code> within the custom element handler.</em>
 
 </section>
 
