Update copy on Lifecycle:Event Handling step

--- a/index.html
+++ b/index.html
@@ -490,7 +490,7 @@ section#installation pre em.comment
           idle time between animation frames
       </a>.
 
-    <dt>10. Event Handler <em>(On completion Repeats steps #5, #6, #7, #8 &amp; #9)</em>
+    <dt>10. Event Handling <em>(On completion Repeats steps #5, #6, #7, #8 &amp; #9)</em>
     <dd>
       There are a few ways events are registered by <strong>snuggsiツ</strong>.
       Whether you choose a declarative registration <code>&lt;button onclick=onfoo&gt;</code>,
