Add base style for lifecycle view

--- a/index.html
+++ b/index.html
@@ -501,6 +501,11 @@ section#installation pre em.comment
       <em>To prevent <strong>Rendering</strong> simply prevent the default event action
         by calling <code>event.prevent ()</code> within the custom element handler.</em>
 
+  <style>
+    #lifecycle {
+      background: red;
+    }
+  </style>
 </section>
 
 <section view id=conventions>
