Add (uglier) base box style for lifecycle view

--- a/index.html
+++ b/index.html
@@ -505,6 +505,18 @@ section#installation pre em.comment
     #lifecycle {
       background: red;
     }
+
+    #lifecycle dl {
+      background: pink;
+    }
+
+    #lifecycle dt {
+      background: blue;
+    }
+
+    #lifecycle dd {
+      background: black;
+    }
   </style>
 </section>
 
