Fix verticle flow of margins with golden ratio

--- a/index.html
+++ b/index.html
@@ -511,11 +511,14 @@ section#installation pre em.comment
     }
 
     #lifecycle dt {
+      text-align: left;
       background: blue;
+      font-size: 1.612em;
     }
 
     #lifecycle dd {
       background: black;
+      margin-bottom: 2.612em;
     }
   </style>
 </section>
