--- a/index.html
+++ b/index.html
@@ -514,11 +514,15 @@ section#installation pre em.comment
       text-align: left;
       background: blue;
       font-size: 1.612em;
+      margin: 0 1.612em;
     }
 
     #lifecycle dd {
+      font-size: 1em;
+      text-align: left;
       background: black;
-      margin-bottom: 2.612em;
+      line-height: 1.612em;
+      margin: 0 4em 2.612em;
     }
   </style>
 </section>
