Fix verticle flow of margins with golden ratio

--- a/index.html
+++ b/index.html
@@ -514,13 +514,14 @@ section#installation pre em.comment
       text-align: left;
       background: blue;
       font-size: 1.612em;
-      margin: 0 1.612em;
+      margin: 0 1.612em 0.612em;
     }
 
     #lifecycle dd {
       font-size: 1em;
       text-align: left;
       background: black;
+      letter-spacing: 0;
       line-height: 1.612em;
       margin: 0 4em 2.612em;
     }
