Remove shitty colors

--- a/index.html
+++ b/index.html
@@ -502,17 +502,14 @@ section#installation pre em.comment
         by calling <code>event.prevent ()</code> within the custom element handler.</em>
 
   <style>
-    #lifecycle {
-      background: red;
-    }
+    #lifecycle { }
 
     #lifecycle dl {
-      background: pink;
+      margin: 0 1em;
     }
 
     #lifecycle dt {
       text-align: left;
-      background: blue;
       font-size: 1.612em;
       margin: 0 1.612em 0.612em;
     }
@@ -520,7 +517,6 @@ section#installation pre em.comment
     #lifecycle dd {
       font-size: 1em;
       text-align: left;
-      background: black;
       letter-spacing: 0;
       line-height: 1.612em;
       margin: 0 4em 2.612em;
