Add smallish styling to ems inside of dts

--- a/index.html
+++ b/index.html
@@ -514,6 +514,9 @@ section#installation pre em.comment
       margin: 0 1.612em 0.612em;
     }
 
+    #lifecycle dt em
+      { font-size: 80% }
+
     #lifecycle dd {
       font-size: 1em;
       text-align: left;
