Whitespace formatting for lifecycle documentation styling

--- a/index.html
+++ b/index.html
@@ -504,9 +504,8 @@ section#installation pre em.comment
   <style>
     #lifecycle { }
 
-    #lifecycle dl {
-      margin: 0 1em;
-    }
+    #lifecycle dl
+      { margin: 0 1em }
 
     #lifecycle dt {
       text-align: left;
@@ -525,6 +524,7 @@ section#installation pre em.comment
       margin: 0 4em 2.612em;
     }
   </style>
+
 </section>
 
 <section view id=conventions>
