Fix margins of lifecycle list

--- a/index.html
+++ b/index.html
@@ -522,7 +522,7 @@ section#installation pre em.comment
       text-align: left;
       letter-spacing: 0;
       line-height: 1.612em;
-      margin: 0 4em 2.612em;
+      margin: 0 1em 2.612em 3.6em;
     }
 
   </style>
