Whitespace formatting for lifecycle documentation styling

--- a/index.html
+++ b/index.html
@@ -513,6 +513,10 @@ section#installation pre em.comment
       font-size: 1.612em;
       margin: 0 1.612em 0.612em;
     }
+    #lifecycle dt:first-letter {
+      font-size: 1.612em;
+      color: rgba(255,255,255,0.4);
+    }
 
     #lifecycle dt em
       { font-size: 80% }
