--- a/index.html
+++ b/index.html
@@ -432,7 +432,7 @@ section#installation pre em.comment
       from within handler functions.  <strong>Be sure to declare <code>event</code> in your method signature.</strong>
       <em>(example: <code>onclick (event) { event.prevent () }</code></em>
 
-    <dt>6. Token Binding
+    <dt>5a. Token Binding
     <dd>
       Occurs by <strong><em>"Tree Walking"<sup>&trade;</sup></em></strong> 
       child content of your custom element each time a <code>{token}</code> is discovered.
@@ -440,7 +440,7 @@ section#installation pre em.comment
       <code>{foo}</code> is replaced with <code>"some value"</code> If a <code>get foo () { return 'some value' }</code>
       is a property of your class definition.
 
-    <dt>7. Template Iteration
+    <dt>5b. Template Iteration
     <dd>
     Often we need to iterate over collections within a custom element. Traditionally this is done 
     <a
@@ -451,7 +451,7 @@ section#installation pre em.comment
     will <strong><em>"Tree Walk"<sup>&trade;</sup></em></strong> the children of your custom element looking for 
     <code>&lt;template name=&hellip;&gt;</code> and <em>"bind"</em> the collection value of a property with the same name on your class.
 
-    <dt>8. Reflection
+    <dt>5c. Reflection
     <dd>
       One of the many pains of classic browser programming is registering events on DOM elements.
       Reflection is the process of declaratively registering event handlers by name within your HTML.
@@ -465,7 +465,7 @@ section#installation pre em.comment
       <code>&lt;foo-bar onclick=hello&gt;</code> will <em>"automagically"<sup>&trade;</sup></em> register
       the <code>hello (event) { }</code> handler defined on the custom element <code>class</code> definition.
 
-    <dt>9. Post-Render Idle
+    <dt>6. Post-Render Idle
     <dd>
       Idling occurs after the <strong>Rendering</strong> routine consisting of
       <strong>Token Binding</strong>, <strong>Template Iteration</strong>,
@@ -490,7 +490,7 @@ section#installation pre em.comment
           idle time between animation frames
       </a>.
 
-    <dt>10. Event Handling <em>(On completion Repeats steps #5, #6, #7, #8 &amp; #9)</em>
+    <dt>7. Event Handling <em>(On completion Repeats steps #5, #6, #7, #8 &amp; #9)</em>
     <dd>
       There are a few ways events are registered by <strong>snuggsiツ</strong>.
       Whether you choose a declarative registration <code>&lt;button onclick=onfoo&gt;</code>,
