Whitespace formatting for lifecycle documentation styling

--- a/index.html
+++ b/index.html
@@ -481,8 +481,8 @@ section#installation pre em.comment
         rel=external
         href=https://www.quora.com/What-is-60-frames-per-second>
           60 Frames Per Second
-      </a>
-      rate period coincides with the
+      </a> rate period coincides with the
+
       <a
         target=mdn
         rel=external
