Add margining to Lifecycle

--- a/index.html
+++ b/index.html
@@ -503,7 +503,8 @@ section#installation pre em.comment
 
   <style>
 
-    #lifecycle { }
+    #lifecycle
+      { margin-bottom: 10em; height: auto }
 
     #lifecycle dl
       { margin: 0 1em }
