--- a/index.html
+++ b/index.html
@@ -227,7 +227,7 @@ header-group a span {
       <a href=#lifecycle>Lifecycle</a>
 
     <li>
-      <details>
+      <details open>
         <summary><a href=#conventions>Conventions</a></summary>
 
         <ul>
