--- a/index.html
+++ b/index.html
@@ -236,7 +236,7 @@ header-group a span {
       </details>
 
     <li>
-      <details>
+      <details open>
         <summary><a href=#antipatterns>Anti-Patterns</a></summary>
 
         <ul>
