Open last detail (for realz this time)

--- a/index.html
+++ b/index.html
@@ -249,7 +249,7 @@ header-group a span {
   <header>Documentation</header>
   <ul>
     <li>
-      <details>
+      <details open>
         <summary><a href=#interfaces>Interfaces</a></summary>
 
         <ul>
