--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@
 <script name=polyfill src=//cdnjs.cloudflare.com/ajax/libs/webcomponentsjs/1.0.0/webcomponents-hi-ce.js></script>
 
 <link rel=import href=/examples/header-group>
+<link rel=stylesheet href=/index.css></script>
 <link rel=stylesheet href=http://www.devpunks.com/typography.css>
 
 <style>
