Add code for slot replacement within documentation

--- a/index.html
+++ b/index.html
@@ -248,7 +248,7 @@
       Imports are relative to the partial HTML document that contains the contents to hydrate each
       instance of your custom element on upgrade.
 
-    <dt>4. Slot Replacement
+    <dt>4. <code>&lt;slot&gt;</code> Replacement
     <dd>
       After <strong>Imporing</strong> the default contents of your custom element
       there will be a replacement of any child elements with a
