Add code for {token} binding within documentation

--- a/index.html
+++ b/index.html
@@ -281,7 +281,7 @@
       from within handler functions.  <strong>Be sure to declare <code>event</code> in your method signature.</strong>
       <em>(example: <code>onclick (event) { event.prevent () }</code></em>
 
-    <dt>5a. Token Binding
+    <dt>5a. <code>{token}</code> Binding
     <dd>
       Occurs by <strong><em>"Tree Walking"<sup>&trade;</sup></em></strong> 
       child content of your custom element each time a <code>{token}</code> is discovered.
