Implement footer element within index.html Documentation

--- a/index.html
+++ b/index.html
@@ -431,7 +431,11 @@
 
 </aside>
 
-<footer></footer>
+<footer>
+  <header>Footer Header</header>
+
+  <nav>This is the nav</nav>
+</footer>
 
 <script src=/browser-sync.es></script>
 
