Add copy slogan to footer

--- a/index.html
+++ b/index.html
@@ -435,6 +435,8 @@
   <header>Footer Header</header>
 
   <nav>This is the nav</nav>
+
+  <em>Copyright &copy; 2017 A <strong>devPunks</strong> project</em>
 </footer>
 
 <script src=/browser-sync.es></script>
