--- a/index.html
+++ b/index.html
@@ -341,7 +341,7 @@
           idle time between animation frames
       </a>.
 
-    <dt>7. Event Handling <em>(On completion Repeats steps #5, #6, #7, #8 &amp; #9)</em>
+    <dt>7. Event Handling <em>(On completion repeats rendering step #5 a, b, &amp; c)</em>
     <dd>
       There are a few ways events are registered by <strong>snuggsiツ</strong>.
       Whether you choose a declarative registration <code>&lt;button onclick=onfoo&gt;</code>,
