--- a/index.html
+++ b/index.html
@@ -302,10 +302,11 @@
     will <strong><em>"Tree Walk"<sup>&trade;</sup></em></strong> the children of your custom element looking for 
     <code>&lt;template name=&hellip;&gt;</code> and <em>"bind"</em> the collection value of a property with the same name on your class.
 
-    <dt>5c. Reflection
+    <dt>5c. Registration
     <dd>
       One of the many pains of classic browser programming is registering events on DOM elements.
-      Reflection is the process of declaratively registering event handlers by name within your HTML.
+      <strong>Registration</strong> is the process of declaratively registering event handlers by name
+      within your custom element and <code>&lt;template&gt;</code> HTML.
       <strong>snuggsiツ</strong> will <strong><em>"Tree Walk"<sup>&trade;</sup></em></strong> 
       your custom element and children looking for 
       <a
