--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 -->
 
 <script src=/></script>
-<script name=polyfill src=//cdnjs.cloudflare.com/ajax/libs/webcomponentsjs/1.0.0/webcomponents-hi-ce.js></script>
+<script name=polyfill src=http://cdnjs.cloudflare.com/ajax/libs/webcomponentsjs/1.0.0/webcomponents-hi-ce.js></script>
 
 <link rel=stylesheet href=http://www.devpunks.com/typography.css>
 <link rel=stylesheet href=/index.css></script>
@@ -195,7 +195,7 @@
 
   <pre><code>
   <em class=comment>&lt;!-- http(s): protocol required to run locally --&gt;</em>
-  &lt;script nomodule src=//unpkg.com/snuggsi&gt;&lt;/script&gt;
+  &lt;script nomodule src=https://unpkg.com/snuggsi&gt;&lt;/script&gt;
   </pre></code>
 
   <p class=center>Et Voila <em>(that's it!)</em> ツ
