--- a/index.html
+++ b/index.html
@@ -44,9 +44,9 @@
 -->
 
 <script src=/></script>
-<script name=polyfill src=http://cdnjs.cloudflare.com/ajax/libs/webcomponentsjs/1.0.0/webcomponents-hi-ce.js></script>
+<script name=polyfill src=https://cdnjs.cloudflare.com/ajax/libs/webcomponentsjs/1.0.0/webcomponents-hi-ce.js></script>
 
-<link rel=stylesheet href=http://www.devpunks.com/typography.css>
+<link rel=stylesheet href=https://www.devpunks.com/typography.css>
 <link rel=stylesheet href=/index.css></script>
 
 <link rel=import href=/examples/header-group>
