--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 <script src=/></script>
 <script name=polyfill src=https://cdnjs.cloudflare.com/ajax/libs/webcomponentsjs/1.0.0/webcomponents-hi-ce.js></script>
 
-<link rel=stylesheet href=https://www.devpunks.com/typography.css>
+<link rel=stylesheet href=https://devpunks.herokuapp.com/typography.css>
 <link rel=stylesheet href=/index.css></script>
 
 <link rel=import href=/examples/header-group>
