Fix error in `header-group` example markup

--- a/examples/header-group/index.html
+++ b/examples/header-group/index.html
@@ -68,7 +68,7 @@ Element `header-group`
 <code>
   <pre>
     &lt;header-group&gt;
-      &lt;h2 slot=header&gt;My Custom Headere&lt;/h2&gt;&lt;/h2&gt;
+      &lt;h2 slot=header&gt;My Custom Headere&lt;/h2&gt;
       &lt;p slot=subheader&gt;It Just Works&trade;&lt;/p&gt;
     &lt;/header-group&gt;
   </pre>
