--- a/index.html
+++ b/index.html
@@ -223,9 +223,10 @@
       After <strong>Definition & Declaration</strong> the custom element will go through
       it's <code>constructor ()</code> routine. Typically you will not need to define a
       <code>constructor ()</code> on your <code>class</code>. <strong>snuggsiツ</strong>
-      takes care of all <code>super ()</code> calls for you on instantiation. If you
-      would like to intercept the custom element construction use the
-      <code>initialize ()</code> hook.
+      takes care of all <code>super ()</code> calls for you on instantiation.
+      <br><br>
+      If you would like to alter the custom element construction,
+      define a function <code>initialize ()</code> which is a hook that will be used automatically.
 
     <dt>2. Introspection
     <dd>
