Grammatical change to Construction documentation

--- a/index.html
+++ b/index.html
@@ -226,7 +226,7 @@
       takes care of all <code>super ()</code> calls for you on instantiation.
       <br><br>
       If you would like to alter the custom element construction,
-      define a function <code>initialize ()</code> which is a hook that will be used automatically.
+      define an <code>initialize ()</code> function which is a hook that will be used automatically.
 
     <dt>2. Introspection
     <dd>
