Add header for Event Registration

--- a/index.html
+++ b/index.html
@@ -364,6 +364,8 @@
 <section view id=conventions>
   <h1>Conventions</h1>
 
+  <header>Event Registration</header>
+
 </section>
 
 <section view id=antipatterns>
