Add header for looping over collections

--- a/index.html
+++ b/index.html
@@ -366,6 +366,10 @@
 
   <header>Event Registration</header>
 
+
+  <header>Looping Over Collections</header>
+
+
 </section>
 
 <section view id=antipatterns>
