Add header for Creating custom elements

--- a/index.html
+++ b/index.html
@@ -370,6 +370,9 @@
   <header>Looping Over Collections</header>
 
 
+  <header>Creating Custom Elements</header>
+
+
 </section>
 
 <section view id=antipatterns>
