Add header for using data layers within your component

--- a/index.html
+++ b/index.html
@@ -373,6 +373,9 @@
   <header>Looping Over Collections</header>
 
 
+  <header>Using Data Within Your Component</header>
+
+
 </section>
 
 <section view id=antipatterns>
