Update footer logo to have link

--- a/index.html
+++ b/index.html
@@ -451,7 +451,7 @@
 </aside>
 
 <footer>
-  <header>snuggsi.esツ</header>
+  <header><a title=snuggsi.esツ href=/>snuggsi.esツ</a></header>
 
   <nav>This is the nav</nav>
 
