Update Lifecycle headers

--- a/index.html
+++ b/index.html
@@ -228,7 +228,7 @@
       If you would like to alter the custom element construction,
       define an <code>initialize ()</code> function which is a hook that will be used automatically.
 
-    <dt>2. Introspection
+    <dt>2. Reflection
     <dd>
       After <strong>Construction</strong> the custom element will inspect your
       <code>class extends HTMLElement</code> definition for Event Handlers.
@@ -237,7 +237,7 @@
       delegate the event handler to your custom element container.  As a
       convenience the <code>this</code> keyword will <strong><em>Always</em></strong> be bound to the custom element.
 
-    <dt>3. Importing
+    <dt>3. <code>&lt;link&gt;</code>Importing
     <dd>
       The <code>&lt;link rel=import&gt;</code> step is critical for custom elements which contain a definition within an external file.
       <em>(See <a
