Update Lifecycle headers

--- a/index.html
+++ b/index.html
@@ -210,7 +210,7 @@
   <h1>Custom Element Lifecycle</h1>
 
   <dl>
-    <dt>0. Definition / Declaration
+    <dt>0. Definition
     <dd>
       A custom element is <em>"defined"</em> by specifying the <code>Element `your-tag-name-here`</code>
       declaration immediately followed with a <code>( class extends HTMLElement {} )</code> definition.
