Update Registration label

--- a/index.html
+++ b/index.html
@@ -306,7 +306,7 @@
     <dt>5c. Event Registration
     <dd>
       One of the many pains of classic browser programming is registering events on DOM elements.
-      <strong>Registration</strong> is the process of declaratively registering event handlers by name
+      <strong>Event Registration</strong> is the process of declaratively registering event handlers by name
       within your custom element and <code>&lt;template&gt;</code> HTML.
       <strong>snuggsiツ</strong> will <strong><em>"Tree Walk"<sup>&trade;</sup></em></strong> 
       your custom element and children looking for 
