Unnecesary Reflow anti-pattern

--- a/index.html
+++ b/index.html
@@ -381,6 +381,9 @@
 <section view id=antipatterns>
   <h1>Anti-Patterns</h1>
 
+  <header>Unnecessary Reflow</header>
+
+
 </section>
 
 <section view id=interfaces>
