remove styling from aside in documentation

--- a/index.html
+++ b/index.html
@@ -384,6 +384,9 @@
   <header>Unnecessary Reflow</header>
 
 
+  <header>Unnecessary Repaint</header>
+
+
 </section>
 
 <section view id=interfaces>
