Add navigation link for mixins

--- a/index.html
+++ b/index.html
@@ -178,6 +178,9 @@
     <li>
       <a title=Context href=#context>Context</a>
 
+    <li>
+      <a title=Mixins href=#mixins>Mixins</a>
+
   </ul>
 
 </nav>
