Add resource links to Mix-In Documents

--- a/index.html
+++ b/index.html
@@ -420,6 +420,23 @@
 <section view id=mixins>
   <h1>Mixins</h1>
 
+  <h3>Further Learning</h3>
+
+  <ul>
+    <li>
+      <a
+        rel=help
+        target=mdn
+        href=https://developer.mozilla.org/en-US/docs/Glossary/Mixin>Mix-in Definition</a>
+
+    <li>
+      <a
+        rel=help
+        target=mdn
+        href=https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Classes#Mix-ins>Class Mix-ins</a>
+
+  </ul>
+
 </section>
 
 </main>
