Add resource links to Mix-In Documents

--- a/index.html
+++ b/index.html
@@ -426,6 +426,12 @@
     <li>
       <a
         rel=help
+        target=wikipedia
+        href=https://en.wikipedia.org/wiki/Mixin>Mixin: Object Oriented Programing Concepts</a>
+
+    <li>
+      <a
+        rel=help
         target=mdn
         href=https://developer.mozilla.org/en-US/docs/Glossary/Mixin>Mix-in Definition</a>
 
