Close details for Intrafaces documentation

--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
   <header>Documentation</header>
   <ul>
     <li>
-      <details open>
+      <details>
         <summary><a href=#interfaces>Interfaces</a></summary>
 
         <ul>
