Add to Examples aside list `add-subtract`

--- a/index.html
+++ b/index.html
@@ -457,6 +457,9 @@
       <ul>
         <li>
           <a href=/examples/hello-world>&lt;hello-world&gt;</a>
+
+        <li>
+          <a href=/examples/add-subtract>&lt;add-subtract&gt;</a>
     </nav>
 
   </details>
