Add to Examples aside list `fidget-spinner`

--- a/index.html
+++ b/index.html
@@ -460,6 +460,9 @@
 
         <li>
           <a href=/examples/add-subtract>&lt;add-subtract&gt;</a>
+
+        <li>
+          <a href=/examples/fidget-spinner>&lt;fidget-spinner&gt;</a>
     </nav>
 
   </details>
