Add to Examples aside list `header-group`

--- a/index.html
+++ b/index.html
@@ -462,6 +462,9 @@
           <a href=/examples/add-subtract>&lt;add-subtract&gt;</a>
 
         <li>
+          <a href=/examples/header-group/example.html>&lt;header-group&gt;</a>
+
+        <li>
           <a href=/examples/fidget-spinner>&lt;fidget-spinner&gt;</a>
     </nav>
 
