Add to Examples aside list `infinity-calendar`

--- a/index.html
+++ b/index.html
@@ -465,6 +465,9 @@
           <a href=/examples/header-group/example.html>&lt;header-group&gt;</a>
 
         <li>
+          <a href=/examples/infinity-calendar>&lt;infinity-calendar&gt;</a>
+
+        <li>
           <a href=/examples/fidget-spinner>&lt;fidget-spinner&gt;</a>
     </nav>
 
