Add to Examples aside list `nav-view`

--- a/index.html
+++ b/index.html
@@ -468,6 +468,9 @@
           <a href=/examples/infinity-calendar>&lt;infinity-calendar&gt;</a>
 
         <li>
+          <a href=/examples/nav-view/example.html>&lt;nav-view&gt;</a>
+
+        <li>
           <a href=/examples/fidget-spinner>&lt;fidget-spinner&gt;</a>
     </nav>
 
