--- a/index.html
+++ b/index.html
@@ -459,6 +459,9 @@
           <a href=/examples/hello-world>&lt;hello-world&gt;</a>
 
         <li>
+          <a href=/examples/input-output>&lt;input-output&gt;</a>
+
+        <li>
           <a href=/examples/add-subtract>&lt;add-subtract&gt;</a>
 
         <li>
