Add to Examples aside list `user-list`

--- a/index.html
+++ b/index.html
@@ -474,6 +474,9 @@
           <a href=/examples/nav-view/example.html>&lt;nav-view&gt;</a>
 
         <li>
+          <a href=/examples/user-list>&lt;user-list&gt;</a>
+
+        <li>
           <a href=/examples/fidget-spinner>&lt;fidget-spinner&gt;</a>
     </nav>
 
