Close SVG Components Example pane in aside

--- a/index.html
+++ b/index.html
@@ -496,7 +496,7 @@
 
   </details>
 
-  <details open>
+  <details>
     <summary><a href=/examples#components>Components</a></summary>
 
     <nav>
