--- a/index.html
+++ b/index.html
@@ -215,8 +215,8 @@
   <dl>
     <dt>0. Definition
     <dd>
-      A custom element is <em>"defined"</em> by specifying the <code>Element `your-tag-name-here`</code>
-      declaration immediately followed with a <code>( class extends HTMLElement {} )</code> definition.
+      A custom element is <em>"defined"</em> by specifying the <code>Element `your-tag-name`</code>
+      declaration immediately followed with a <code>(class extends HTMLElement {})</code> definition.
       The custom element will be considered an <code>UnknownHTMLElement</code> until an <code>Element</code> 
       definition is specified. This means your custom element can be styled like any other HTML element.
       However, your element will not have functionality until after definition.
