--- a/index.html
+++ b/index.html
@@ -459,7 +459,7 @@
           <a href=/examples/hello-world>&lt;hello-world&gt;</a>
 
         <li>
-          <a href=/examples/input-output>&lt;input-output&gt;</a>
+          <a href=/examples/input-output.html>&lt;input-output&gt;</a>
 
         <li>
           <a href=/examples/add-subtract>&lt;add-subtract&gt;</a>
