use https protocol

--- a/examples/input-output.html
+++ b/examples/input-output.html
@@ -3,7 +3,7 @@
 <meta charset=UTF-8>
 <meta name=viewport content=width=device-width,initial-scale=1>
 
-<link rel=stylesheet href=http://www.devpunks.com/typography.css>
+<link rel=stylesheet href=https://devpunks.herokuapp.com/typography.css>
 
 <script src=/></script>
 <script name=polyfill src=//cdnjs.cloudflare.com/ajax/libs/webcomponentsjs/1.0.0/webcomponents-hi-ce.js></script>
