use https protocol for webcomponentsjs polyfill

--- a/examples/input-output.html
+++ b/examples/input-output.html
@@ -6,7 +6,7 @@
 <link rel=stylesheet href=https://devpunks.herokuapp.com/typography.css>
 
 <script src=/></script>
-<script name=polyfill src=//cdnjs.cloudflare.com/ajax/libs/webcomponentsjs/1.0.0/webcomponents-hi-ce.js></script>
+<script name=polyfill src=https://cdnjs.cloudflare.com/ajax/libs/webcomponentsjs/1.0.0/webcomponents-hi-ce.js></script>
 
 <input-output>
 
