Fix title of `header-group`

--- a/examples/input-output.html
+++ b/examples/input-output.html
@@ -13,7 +13,7 @@
 
 <header-group>
   <h2 slot=header>&lt;input-output&gt;</h2>
-  <a  slot=subheader Title='See more componentexamples' href=./>See more component examples</a>
+  <a  slot=subheader title='See more componentexamples' href=./>See more component examples</a>
 </header-group>
 
 <input-output>
