Add typography.css to `header-group` examples

--- a/examples/header-group/example.html
+++ b/examples/header-group/example.html
@@ -3,6 +3,8 @@
 
 <title>&lt;header-group&gt;</title>
 
+<link rel=stylesheet href=https://devpunks.herokuapp.com/typography.css>
+
 <script src=/></script>
 <script nomodule src=//cdnjs.cloudflare.com/ajax/libs/webcomponentsjs/1.0.0/webcomponents-hi-ce.js></script>
 
