--- a/examples/add-subtract/index.html
+++ b/examples/add-subtract/index.html
@@ -3,7 +3,7 @@
 <meta charset=UTF-8>
 <meta name=viewport content=width=device-width,initial-scale=1>
 
-<link rel=stylesheet href=http://www.devpunks.com/typography.css>
+<link rel=stylesheet href=https://devpunks.herokuapp.com/typography.css>
 <link rel=stylesheet href=add-subtract/index.css>
 
 <script src=/></script>
