--- a/examples/add-subtract/index.html
+++ b/examples/add-subtract/index.html
@@ -7,7 +7,7 @@
 <link rel=stylesheet href=add-subtract/index.css>
 
 <script src=/></script>
-<script name=polyfill src=//cdnjs.cloudflare.com/ajax/libs/webcomponentsjs/1.0.0/webcomponents-hi-ce.js></script>
+<script name=polyfill src=https://cdnjs.cloudflare.com/ajax/libs/webcomponentsjs/1.0.0/webcomponents-hi-ce.js></script>
 
 <header-group>
   <h2 slot=header>&lt;add-subtract&gt;</h2>
