--- a/examples/add-subtract/index.html
+++ b/examples/add-subtract/index.html
@@ -11,7 +11,7 @@
 
 <header-group>
   <h2 slot=header>&lt;add-subtract&gt;</h2>
-  <a  slot=subheader Title='See more componentexamples' href=/examples>See more component examples</a>
+  <a  slot=subheader title='See more component examples' href=/examples>See more component examples</a>
 </header-group>
 
 <!-- import works inline body -->
