Update polyfill dependencies in autocomplete

--- a/examples/autocomplete.html
+++ b/examples/autocomplete.html
@@ -3,7 +3,8 @@
 <meta charset=UTF-8>
 <meta name=viewport content='width=device-width, initial-scale=1'>
 
-<link rel=stylesheet href=http://www.devpunks.com/typography.css>
+<script src=/></script>
+<script name=polyfill src=https://cdnjs.cloudflare.com/ajax/libs/webcomponentsjs/1.0.0/webcomponents-hi-ce.js></script>
 
 <script src=http://unpkg.com/snuggsi/examples/webcomponents-hi-ce.js></script>
 <script nomodule src=http://unpkg.com/snuggsi/snuggsi.min.js></script>
