--- a/examples/header-group/example.html
+++ b/examples/header-group/example.html
@@ -12,7 +12,7 @@
 
 <header-group>
   <h2 slot=header>&lt;header-group&gt;</h2>
-  <a  slot=subheader Title='See more componentexamples' href=/examples>See more component examples</a>
+  <a  slot=subheader title='See more component examples' href=/examples>See more component examples</a>
 </header-group>
 
 <!-- defaults can be supplied -->
