--- a/examples/hello-world/index.html
+++ b/examples/hello-world/index.html
@@ -16,7 +16,7 @@
 
 <header-group>
   <h2 slot=header>&lt;hello-world&gt;</h2>
-  <a  slot=subheader Title='See more componentexamples' href=./>See more component examples</a>
+  <a  slot=subheader title='See more component examples' href=./>See more component examples</a>
 </header-group>
 
 <hello-world>
