--- a/examples/infinity-calendar/index.html
+++ b/examples/infinity-calendar/index.html
@@ -6,9 +6,8 @@
 <script src=/></script>
 <script name=polyfill src=https://cdnjs.cloudflare.com/ajax/libs/webcomponentsjs/1.0.0/webcomponents-hi-ce.js></script>
 
-<script src=infinity-calendar/infinity-calendar.es defer></script>
+<link rel=stylesheet href=https://devpunks.herokuapp.com/typography.css>
 
-<link rel=stylesheet href=http://www.devpunks.com/typography.css>
 <!-- https://jakearchibald.com/2016/link-in-body -->
 <link rel=stylesheet href=/examples/infinity-calendar/infinity-calendar.css>
 
@@ -33,6 +32,8 @@
 
 </header-group>
 -->
+
+<script src=infinity-calendar/infinity-calendar.es defer></script>
 
 <infinity-calendar>
 
