--- a/examples/nav-view/example.html
+++ b/examples/nav-view/example.html
@@ -5,8 +5,8 @@
 
 <link rel=stylesheet href=https://devpunks.herokuapp.com/typography.css>
 
-<script src=/snuggsi.es></script>
-<script nomodule src=//cdnjs.cloudflare.com/ajax/libs/webcomponentsjs/1.0.0/webcomponents-hi-ce.js></script>
+<script src=/></script>
+<script nomodule src=https://cdnjs.cloudflare.com/ajax/libs/webcomponentsjs/1.0.0/webcomponents-hi-ce.js></script>
 
 <link rel=import href=/examples/header-group>
 <link rel=import href=/examples/nav-view>
