--- a/examples/nav-view/example.html
+++ b/examples/nav-view/example.html
@@ -13,7 +13,7 @@
 
 <header-group>
   <h2 slot=header>&lt;nav-view&gt;</h2>
-  <a  slot=subheader Title='See more componentexamples' href=/examples>See more component examples</a>
+  <a  slot=subheader title='See more component examples' href=/examples>See more component examples</a>
 </header-group>
 
 <nav-view>
