Update typography stylesheet protocol to https: in party-line

--- a/examples/party-line.html
+++ b/examples/party-line.html
@@ -6,8 +6,7 @@
 <script src=/></script>
 <script name=polyfill src=https://cdnjs.cloudflare.com/ajax/libs/webcomponentsjs/1.0.0/webcomponents-hi-ce.js></script>
 
-<script src=http://unpkg.com/snuggsi/examples/webcomponents-hi-ce.js></script>
-<script nomodule src=http://unpkg.com/snuggsi/snuggsi.min.js></script>
+<link rel=stylesheet href=https://devpunks.herokuapp.com/typography.css>
 
 <header-group>
   <h2 slot=header>&lt;party-line&gt;</h2>
