--- a/examples/user-list/index.html
+++ b/examples/user-list/index.html
@@ -14,7 +14,7 @@
 <script src=user-list/rxr.js></script>
 <script src=//unpkg.com/rxjs/bundles/Rx.min.js></script>
 
-<script src=/snuggsi.es></script>
+<script src=/></script>
 <script src=user-list/reactive.es></script>
 
 <script defer>
