Update polyfill dependencies in weather-viewer

--- a/examples/weather-viewer/index.html
+++ b/examples/weather-viewer/index.html
@@ -3,8 +3,8 @@
 <meta charset=UTF-8>
 <meta name=viewport content=width=device-width,initial-scale=1>
 
-<script nomodule src=//unpkg.com/snuggsi></script>
-<script src=//unpkg.com/snuggsi/examples/webcomponents-hi-ce.js></script>
+<script src=/></script>
+<script name=polyfill src=https://cdnjs.cloudflare.com/ajax/libs/webcomponentsjs/1.0.0/webcomponents-hi-ce.js></script>
 
 <weather-viewer onclick='alert ("snugs")'  latitude=40.79 longitude=-73.97>
   <link rel=alternate type=application/json href=/weather-viewer>
