--- a/examples/weather-viewer/index.html
+++ b/examples/weather-viewer/index.html
@@ -6,7 +6,9 @@
 <script src=/></script>
 <script name=polyfill src=https://cdnjs.cloudflare.com/ajax/libs/webcomponentsjs/1.0.0/webcomponents-hi-ce.js></script>
 
-<weather-viewer onclick='alert ("snugs")'  latitude=40.79 longitude=-73.97>
+<link rel=stylesheet href=https://devpunks.herokuapp.com/typography.css>
+
+<weather-viewer latitude=40.79 longitude=-73.97>
   <link rel=alternate type=application/json href=/weather-viewer>
 
   <img slot=image src={image} alt={name}>
