Update typography stylesheet protocol to https: in x-flashy

--- a/examples/x-flashy.html
+++ b/examples/x-flashy.html
@@ -3,7 +3,7 @@
 
 <title>&lt;x-flashy&gt;</title>
 
-<link rel=stylesheet href=//www.devpunks.com/typography.css>
+<link rel=stylesheet href=https://devpunks.herokuapp.com/typography.css>
 
 <style>
 
