Update polyfill dependencies in x-flashy

--- a/examples/x-flashy.html
+++ b/examples/x-flashy.html
@@ -32,7 +32,7 @@
 </style>
 
 <script src=/></script>
-<script name=polyfill src=//cdnjs.cloudflare.com/ajax/libs/webcomponentsjs/1.0.0/webcomponents-hi-ce.js></script>
+<script name=polyfill src=https://cdnjs.cloudflare.com/ajax/libs/webcomponentsjs/1.0.0/webcomponents-hi-ce.js></script>
 
 <link rel=icon type=image/png href=/favicon-32x32.png sizes=32x32>
 
