Update Lifestyle documentation

--- a/index.html
+++ b/index.html
@@ -325,7 +325,7 @@
     <dd>
       Idling occurs after the <strong>Rendering</strong> routine consisting of
       <strong>Token Binding</strong>, <strong>Template Iteration</strong>,
-      &amp; <strong>Reflection</strong> has completed. This
+      &amp; <strong>Event Registration</strong> has completed. This
       <a
         target=wikipedia
         rel=external
