Update Conventions documentation

--- a/index.html
+++ b/index.html
@@ -370,13 +370,22 @@
   <header>Creating Custom Elements</header>
 
 
-  <header>Event Registration</header>
+  <header>Registering Events</header>
 
 
   <header>Looping Over Collections</header>
 
 
-  <header>Using Data Within Your Component</header>
+  <header>The Data Context</header>
+
+
+  <header>Reusable Components</header>
+
+
+  <header>When to separate</header>
+
+
+  <header>Bundling &amp; Transpilation</header>
 
 
 </section>
