--- a/index.html
+++ b/index.html
@@ -589,10 +589,13 @@ $$$$$ https://www.youtube.com/watch?v=tKvNeNGmOtU
           <a href=/examples/hello-world>&lt;hello-world&gt;</a>
 
         <li>
+          <a href=/examples/add-subtract>&lt;add-subtract&gt;</a>
+
+        <li>
           <a href=/examples/input-output.html>&lt;input-output&gt;</a>
 
         <li>
-          <a href=/examples/add-subtract>&lt;add-subtract&gt;</a>
+          <a href=/examples/input-output.html>&lt;input-output&gt;</a>
 
         <li>
           <a href=/examples/header-group/example.html>&lt;header-group&gt;</a>
