Add multiple choice to examples list

--- a/examples/index.html
+++ b/examples/index.html
@@ -39,6 +39,9 @@
     <a title=&lt;input-output&gt; href=/examples/input-output.html>&lt;input-output&gt;</a>
 
   <li>
+    <a title=&lt;multiple-choice&gt; href=/examples/multiple-choice>&lt;multiple-choice&gt;</a>
+
+  <li>
     <a title=&lt;x-flash&gt; href=/examples/x-flashy.html>&lt;x-flashy&gt;</a>
 
   <li>
