--- a/index.html
+++ b/index.html
@@ -595,7 +595,7 @@ $$$$$ https://www.youtube.com/watch?v=tKvNeNGmOtU
           <a href=/examples/input-output.html>&lt;input-output&gt;</a>
 
         <li>
-          <a href=/examples/input-output.html>&lt;input-output&gt;</a>
+          <a href=/examples/multiple-choice>&lt;multiple-choice&gt;</a>
 
         <li>
           <a href=/examples/header-group/example.html>&lt;header-group&gt;</a>
