Fix title error on user-list

--- a/examples/index.html
+++ b/examples/index.html
@@ -51,7 +51,7 @@
     <a title='<nav-view>' href=/examples/nav-view>&lt;nav-view&gt;</a>
 
   <li>
-    <a title='<nav-view>' href=/examples/user-list>&lt;user-list&gt;</a>
+    <a title='<user-list>' href=/examples/user-list>&lt;user-list&gt;</a>
 
   <li>
     <a title='<infinity-calendar>' href=/examples/infinity-calendar>&lt;infinity-calendar&gt;</a>
