Remove 'snuggsi' from Framework list because snuggsi isn't a framework. :-)

--- a/examples/multiple-choice/index.html
+++ b/examples/multiple-choice/index.html
@@ -41,7 +41,7 @@ Element `multiple-choice`
       [
         {
           question: 'What framework should we start with?',
-          answers: ['React', 'snuggsi'],
+          answers: ['React', 'Ember.js', 'Vue'],
           answer: 1
         },
 
