Add Angular to mix as per @aruprakshit's suggestion

--- a/examples/multiple-choice/index.html
+++ b/examples/multiple-choice/index.html
@@ -41,8 +41,8 @@ Element `multiple-choice`
       [
         {
           question: 'What framework should we start with?',
-          answers: ['React', 'Ember.js', 'Vue'],
-          answer: 1
+          answers: ['React', 'Ember.js', 'Vue', 'Angular', 'jQuery'],
+          // answer: undefined // There is no answer hehe
         },
 
         {
