Add typography styling

--- a/examples/multiple-choice/index.html
+++ b/examples/multiple-choice/index.html
@@ -1,5 +1,5 @@
+<link rel=stylesheet href=https://devpunks.herokuapp.com/typography.css></script>
 <script src=//unpkg.com/snuggsi></script>
-<script src=/browser-sync.es></script>
 
 <h1>&lt;multiple-choice&gt;</h1>
 
