--- a/examples/multiple-choice/index.html
+++ b/examples/multiple-choice/index.html
@@ -43,7 +43,7 @@ Element `multiple-choice`
     this.context.questions_and_answers =
       [
         {
-          question: 'What framework should we start with?',
+          question: 'what popular tool for developing the client side application should we use??',
           answers: ['React', 'Ember.js', 'Vue', 'Angular', 'jQuery'],
           // answer: undefined // There is no answer hehe
         },
