Remove redundant question mark

--- a/examples/multiple-choice/index.html
+++ b/examples/multiple-choice/index.html
@@ -50,7 +50,7 @@ Element `multiple-choice`
     this.context.questions_and_answers =
       [
         {
-          question: 'what popular tool for developing the client side application should we use??',
+          question: 'what popular tool for developing the client side application should we use?',
           answers: ['React', 'Ember.js', 'Vue', 'Angular', 'jQuery'],
           // answer: undefined // There is no answer hehe
         },
