Wrap component in main element

--- a/examples/multiple-choice/index.html
+++ b/examples/multiple-choice/index.html
@@ -14,6 +14,8 @@
   <a  slot=subheader title='See more component examples' href=./>See more component examples</a>
 </header-group>
 
+<main>
+
 <multiple-choice>
   <blockquote>{question}</blockquote>
 
@@ -37,6 +39,8 @@
   </footer>
 
 </multiple-choice>
+
+</main>
 
 <script>
 
