Add P.R.P.L. Pattern to contentions list

--- a/index.html
+++ b/index.html
@@ -385,6 +385,39 @@
   <header>When to separate</header>
 
 
+  <article><!-- <medium-article> -->
+    <header>The <abbr title='Push, Render, Precache, Lazy-load'>P.R.P.L.</abbr> Pattern</header>
+
+    <aside>
+      <header>Relatd Links</header>
+
+      <ul>
+        <li>
+          <a rel=help target=external href=https://www.youtube.com/watch?v=4bZvq3nodf4>
+            Progressive Performance <em>(Chrome Dev Summit)</em>
+          </a>
+
+        <li>
+          <a rel=help target=external href=https://developers.google.com/web/fundamentals/performance/prpl-pattern/>
+            <abbr title='Push, Render, Precache, Lazy-load'>P.R.P.L.</abbr> Pattern
+          </a>
+
+        <li>
+          <a rel=help target=external href=https://www.slideshare.net/grgur/prpl-pattern-with-webpack-and-react>
+            <abbr title='Push, Render, Precache, Lazy-load'>P.R.P.L.</abbr> Pattern with Webpack and React
+          </a>
+
+        <li>
+          <a rel=help target=external href=https://news.ycombinator.com/item?id=13751466>
+            Responses to <abbr title='Push, Render, Precache, Lazy-load'>P.R.P.L.</abbr> Pattern
+          </a>
+
+    </aside>
+
+    </footer>Medium Article Link</footer>
+  </article>
+
+
   <header>Bundling &amp; Transpilation</header>
 
 
